[package]
name = "broadcast-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = {version = "0.8.4", features = ["ws"]}
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower = "0.5.2"
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dashmap = "6.1.0"
anyhow = "1"
tower-http = { version = "0.6.6", features = ["trace"] }
uuid = { version = "1", features = ["v4"] }
